force-app/main/default/objects/nFORCE__Section_Configuration__c/nFORCE__Section_Configuration__c.object-meta.xml
<CustomObject>
    <label>Section Configuration</label>
    <nameField>
        <displayFormat>SC-{000000000}</displayFormat>
        <label>Section Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>