force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Display_Order__c</fullName>
    <defaultValue>1.01</defaultValue>
    <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. This field determines the display order of section configurations on a screen section using ascending order.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>