force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Field_Set_Key__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Set_Key__c</fullName>
    <description>This field is required. It is populated automatically by the Layout Builder tool on the parent screen section. It stores the name of the field set being used to determine what fields to display in Credit Memo or the UI.</description>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>