force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Layout__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies the layout associated with the section configuration. It specifies the layout of the fields in the credit memo for the field set associated with this record.</description>
    <label>Layout</label>
    <referenceTo>nFORCE__Layout__c</referenceTo>
    <relationshipLabel>Section Configurations</relationshipLabel>
    <relationshipName>Section_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>