force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Limit__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Limit__c</fullName>
    <description>This field is optional and is populated by an administrator. When used with the appropriate section resources, the numeric value is used to limit the returned records. It may also be used to return offset records when the value of nFORCE__Offset_By_Limit__c field is set to true. The default value is 0 to return all records.</description>
    <inlineHelpText>This field is optional and is populated by an administrator. When used with the appropriate section resources, the numeric value is used to limit the returned records. The default value is 0 to return all records.</inlineHelpText>
    <label>Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>