force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Parent_Configuration__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies a parent layout associated with the layout record you are viewing. Parent layouts are used to ensure parent-child navigational integreity between section configurations, as well as determining the display order.</description>
    <label>Parent Configuration</label>
    <referenceTo>nFORCE__Section_Configuration__c</referenceTo>
    <relationshipLabel>Child Configurations</relationshipLabel>
    <relationshipName>Child_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>