force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Parent_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Relationship_Name__c</fullName>
    <description>This field is optional. It is populated automatically by the Layout Builder tool on the parent screen section. It is used to store parent-child navigational data, so the screen section can properly display data on child or parent objects of the screen section&apos;s sObject_Type (value in nFORCE__sObject_Type__c field).</description>
    <label>Parent Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>