force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen_Section__c</fullName>
    <description>This field is required. It is populated automatically by the Layout Builder tool on the parent screen section. This field specifies the screen section associated with the section configuration. It provides the screen section with the fields to be used.</description>
    <label>Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Section Configurations</relationshipLabel>
    <relationshipName>Section_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>