force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Section_Header__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Section_Header__c</fullName>
    <description>This field is optional. It is populated by Section Builder when the administrator adds a value on the tier&apos;s header tab. It is used by the view generator to create a smaller header for a specific tier.</description>
    <inlineHelpText>A header to display at the top of this section.</inlineHelpText>
    <label>Section Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>