force-app/main/default/objects/nFORCE__Section_Configuration__c/validationRules/nFORCE__Child_Display_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>nFORCE__Child_Display_Order</fullName>
    <active>true</active>
    <description>Ensures children configurations are ordered after their parents.</description>
    <errorConditionFormula>AND( NOT( ISBLANK( nFORCE__Parent_Configuration__c ) ) , nFORCE__Display_Order__c  &lt;=  nFORCE__Parent_Configuration__r.nFORCE__Display_Order__c )</errorConditionFormula>
    <errorMessage>Child configurations must follow their parents in display order.</errorMessage>
</ValidationRule>