force-app/main/default/objects/nFORCE__Section_Configuration__c/validationRules/nFORCE__Parent_Integrity.validationRule-meta.xml
<ValidationRule>
    <fullName>nFORCE__Parent_Integrity</fullName>
    <active>true</active>
    <description>Ensures Parent Configuration and Parent Relationship Name are both populated if one is.</description>
    <errorConditionFormula>OR( AND(  NOT( ISBLANK( nFORCE__Parent_Configuration__c ) )  , ISBLANK( nFORCE__Parent_Relationship_Name__c ) ) , AND( NOT( ISBLANK( nFORCE__Parent_Relationship_Name__c ) ) , ISBLANK( nFORCE__Parent_Configuration__c ) ) )</errorConditionFormula>
    <errorMessage>Parent Configuration and Parent Relationship Name must both be set.</errorMessage>
</ValidationRule>