force-app/main/default/objects/nFORCE__Section_Configuration__c/listViews/nFORCE__All.listView-meta.xml
<ListView>
    <fullName>nFORCE__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>